tests/ui/discord-frontend/entity_macro/expected_via.stderr
error: expected `via`
  --> tests/ui/discord-frontend/entity_macro/expected_via.rs:40:41
   |
LL |     relates = [multiple "MemberEntity": expected_via "id" as "guild_id"]
   |                                         ^^^^^^^^^^^^

error: aborting due to 1 previous error

